test_resources/lit_class/errors/test9.sem
frame : test9::A::self (mut self : mut &(mut test9::A), next : (dg ()-> void)[nullable])-> void {
    {
        if (next.func != null) (next.func)(next.closure)
    };
    {
        <unit-value>
    }
}
frame : test9::B::foo (self : &(test9::B))-> void {
    <unit-value>
}
frame : test9::B::self::_17_9 (#{CLOSURE-VARREF} : *((mut &(mut test9::B), (dg ()-> void)[nullable])))-> void {
    if (next.func != null) (next.func)(next.closure)
}
frame : test9::B::self (mut self : mut &(mut test9::B), next : (dg ()-> void)[nullable])-> void {
    test9::A::self(self, {&((self, next));(#{CLOSURE-VARREF} : *((mut &(mut test9::B), (dg ()-> void)[nullable])))-> void});
    {
        <unit-value>
    }
}
frame : test9::bar ()-> void {
    let a : &(test9::B) = test9::B::self(new);
    test9::B::foo(a);
    <unit-value>
}
frame : test9::foo ()-> void {
    let a : &(test9::A) = cast!{mut &(mut test9::A)}(test9::B::self(new));
    test9::A::foo(a);
    <unit-value>
}
frame : test9::Error::self::_3_9 (#{CLOSURE-VARREF} : *((mut &(mut test9::Error), (dg ()-> void)[nullable])))-> void {
    if (next.func != null) (next.func)(next.closure)
}
frame : test9::Error::self (mut self : mut &(mut test9::Error), next : (dg ()-> void)[nullable])-> void {
    core::exception::Exception::self(self, {&((self, next));(#{CLOSURE-VARREF} : *((mut &(mut test9::Error), (dg ()-> void)[nullable])))-> void});
    {
        <unit-value>
    }
}
